--- a/mpv.conf
+++ b/mpv.conf
@@ -45,8 +45,8 @@ osd-bar-w=60
 
 #_Préférences des piste_#
 track-auto-selection=yes
-slang=fr,fra                                                                        #On est français ou bien ?
-alang=ja,jp,jpn                                                                     #Comme toute bonne personnen, on regarde que du VOSTFR
+slang=fr,fra,fre                                                                    #On est français ou bien ?
+alang=ja,jp,jpn                                                                     #Comme toute bonne personne, on regarde que du VOSTFR
 
 #_Sous-titres_#
 demuxer-mkv-subtitle-preroll
