Ajout Dithering et Profiles

--- a/mpv.conf
+++ b/mpv.conf
@@ -22,6 +22,16 @@ force-seekable=yes
 sub-ass-override=no
 priority=high  
 
+#_Dither_#
+dither-depth=auto                                                                   #Mon écran est en 8 bits
+# dither=fruit                                                                      #À activer si vous n’avez pas une CG assez puissante
+dither=error-diffusion                                                              #À activer si vous AVEZ une CG assez puissante
+# error-diffusion=sierra-lite                                                       #Suffisant et consomme moins que les autres en dessous. C’est celui par défaut.
+# error-diffusion=floyd-steinberg
+error-diffusion=atkinson
+# error-diffusion=jarvis-judice-ninke
+
+
 #_Streaming_#
 hls-bitrate=max
 cache=auto
@@ -71,7 +81,7 @@ deband=no
 deband-iterations=4
 deband-threshold=64
 deband-range=18
-deband-grain=24 #Parce que le grain dynamique c’est la vie
+deband-grain=48 #Parce que le grain dynamique c’est la vie
 
 #_Redimensionnement_#
 # glsl-shader="~~/Shaders/noise_static_luma.hook" #https://pastebin.com/yacMe6EZ    #Parfois je l’active pour cacher les horreurs sur des vidéos moisis.
@@ -102,3 +112,20 @@ tscale=oversample
 tscale-window=sphinx
 tscale-radius=1.05                                                                  #Plus bas (e.g. 0.95) = Plus net; Plus haut (e.g. 1.05) = Plus doux
 tscale-clamp=0.0
+
+
+[Dither720p]
+profile-desc=cond:((p["video-params/w"]<=1440 and p["video-params/h"]<=810))
+error-diffusion=atkinson
+
+[Dither1080p]
+profile-desc=cond:((p["video-params/w"]<=1920 and p["video-params/h"]<=1080))
+error-diffusion=jarvis-judice-ninke
+
+[EraiRaws]
+profile-desc=cond:string.match(p.filename, "Erai%-raws")~=nil
+deband=yes
+
+[WebDLWaka]
+profile-desc=cond:string.match(p.filename, "%_FR%_HD")~=nil
+deband=yes
