Suppression du lien de téléchargement inutil

--- a/mpv.conf
+++ b/mpv.conf
@@ -20,7 +20,7 @@ prefetch-playlist=yes
 force-seekable=yes
 sub-ass-override=no
 priority=high
-sub-font-provider=auto                                                    # None durant mon QC
+sub-font-provider=auto                                                      # None durant mon QC
 
 #_Dither_#
 dither-depth=no                                                             # Mon écran est en 8 bits
@@ -40,7 +40,7 @@ term-osd-bar
 osd-msg3=${osd-sym-cc} ${time-pos} ${?duration:/ ${duration} (${percent-pos}%)} ${!volume==100:\n Vol: ${volume}%} ${!speed!=1:\n Speed: ${speed}} ${!window-scale==1:\n Scale: ${window-scale}} ${!estimated-frame-number==1:\n Estimated Frame Number: ${estimated-frame-number}}
                                                                             # Permet d’afficher la frame en cours. Plutôt utile pour les comparaisons.
 term-status-msg=+${volume}
-osd-font='Source Sans Pro'                                                  # https://fonts.google.com/specimen/Source+Sans+Pro
+osd-font='Source Sans Pro'
 osd-font-size=15                                                            # Question de goût ici, mais j’ai horreur des interfaces avec des polices gigantesques
 osd-color='#CCFFFFFF'
 osd-border-color='#DD322640'
