Ajout vpy script pour vidéo wakanim

--- a/mpv.conf
+++ b/mpv.conf
@@ -113,8 +113,7 @@ sub-ass-override=yes
 
 [WebDLWaka]
 profile-desc=cond:string.match(p.filename, "%_FR%_HD")~=nil
-deband=yes
-glsl-shader="~~/Shaders/noise_static_luma.hook"
+vf-append=vapoursynth=~~/vpy/debandgrain.vpy:4:auto
 
 [Nanoha]
 profile-desc=cond:string.match(p.filename, "nanoha")~=nil
