--- a/mpv.conf
+++ b/mpv.conf
@@ -20,7 +20,7 @@ force-seekable=yes
 priority=high
 
 #_Dither_#
-dither-depth=no                                                             # Mon écran est en 8 bits
+dither-depth=auto
 dither=fruit
 
 #_Streaming_#
@@ -77,15 +77,8 @@ deband-range=18
 deband-grain=64                                                             # Parce que le grain dynamique c’est la vie
 
 #_Redimensionnement_#
-# glsl-shader="~~/Shaders/noise_static_luma.hook"                           # https://pastebin.com/yacMe6EZ
-                                                                            # Parfois je l’active pour cacher les horreurs sur des vidéos moisis.
-sigmoid-upscaling=no
-linear-downscaling=no
-glsl-shader="~~/Shaders/FSRCNNX_x2_16-0-4-1-edit.glsl"                      # https://github.com/igv/FSRCNN-TensorFlow/releases
-glsl-shader="~~/Shaders/SSimDownscaler.glsl"                                # https://gist.github.com/igv/36508af3ffc84410fe39761d6969be10
-glsl-shader="~~/Shaders/KrigBilateral-new.glsl"
 scale=ewa_lanczossharp
-dscale=mitchell
+dscale=catmull_rom
 cscale=ewa_hanning
 
 #_Interpolation_#
@@ -108,14 +101,6 @@ sub-ass-override=yes
 profile-desc=cond:string.match(p.filename, "%_FR%_HD")~=nil
 vf-append=vapoursynth=~~/vpy/debandgrain.vpy:4:auto
 
-[Nanoha]
-profile-desc=cond:string.match(p.filename, "nanoha")~=nil
-glsl-shaders="~~/Shaders/ravu-zoom-r4.hook"
-
-[DVD]
-profile-desc=cond:((p["video-params/w"] <= 1279 or p["video-params/h"] <= 719))
-glsl-shaders-set="~~/Shaders/ravu-zoom-r4.hook;~~/Shaders/ravu-zoom-r4-chroma.hook"
-
 [444]
 profile-desc=cond:((p["video-params/pixelformat"] == "yuv444p10"))
 glsl-shader="~~/Shaders/KrigBilateral-new-444.glsl"
@@ -123,4 +108,18 @@ glsl-shader="~~/Shaders/KrigBilateral-new-444.glsl"
 [420]
 profile-desc=cond:((p["video-params/pixelformat"] == "yuv420p10" or p["video-params/pixelformat"] == "yuv420p"))
 glsl-shader="~~/Shaders/KrigBilateral-new.glsl"
-glsl-shader="~~/Shaders/KrigBilateral-new-pre.glsl"
+
+[FullHD]
+profile-desc=cond:((p["video-params/h"] >= 900))                            # Mon écran est en 1440p 144Hz
+glsl-shaders="~~/Shaders/ravu-r3-rgb-edit.hook"
+
+[HD]
+profile-desc=cond:((p["video-params/h"] >= 720 and p["video-params/h"] < 900))
+linear-downscaling=no
+glsl-shaders="~~/Shaders/FSRCNNX_x2_16-0-4-1-edit.glsl"                     # https://github.com/igv/FSRCNN-TensorFlow/releases
+glsl-shader="~~/Shaders/SSimDownscaler.glsl"                                # https://gist.github.com/igv/36508af3ffc84410fe39761d6969be10
+dscale=mitchell
+
+[SD]
+profile-desc=cond:((p["video-params/w"] <= 1279 or p["video-params/h"] <= 719))
+glsl-shaders="~~/Shaders/ravu-3x-r4-rgb.hook"
