--- a/mpv.conf
+++ b/mpv.conf
@@ -20,7 +20,7 @@ force-seekable=yes
 priority=high
 
 #_Dither_#
-dither-depth=auto
+dither-depth=10                                                             # Mon écran est en 10 bits
 dither=fruit
 
 #_Streaming_#
@@ -85,7 +85,7 @@ cscale=ewa_hanning
 blend-subtitles=yes
 interpolation=yes
 video-sync=display-resample
-tscale=triangle
+tscale=box
 tscale-window=sphinx
 tscale-radius=1.00                                                          # Plus bas (e.g. 0.95) = Plus net; Plus haut (e.g. 1.05) = Plus doux
 tscale-clamp=0.0
@@ -94,7 +94,7 @@ tscale-clamp=0.0
 [EraiRaws]
 profile-desc=cond:string.match(p.filename, "Erai%-raws")~=nil
 vf-append=vapoursynth=~~/vpy/debandgrain.vpy:4:auto
-sub-ass-styles="C:\Users\Varde\mpv\template-ass\template.ass"
+sub-ass-styles="C:\Users\Varde\AppData\Roaming\mpv\template-ass\template.ass"
 sub-ass-override=yes
 
 [WebDLWaka]
@@ -110,7 +110,7 @@ profile-desc=cond:((p["video-params/pixelformat"] == "yuv420p10" or p["video-par
 glsl-shader="~~/Shaders/KrigBilateral-new.glsl"
 
 [FullHD]
-profile-desc=cond:((p["video-params/h"] >= 900))                            # Mon écran est en 1440p 144Hz
+profile-desc=cond:((p["video-params/h"] >= 900))
 glsl-shaders="~~/Shaders/ravu-r3-rgb-edit.hook"
 
 [HD]
