Passage au webp pour les screenshots
Personnalisation de la façon dont les différents planes sont upscalées et dither down

--- a/mpv.conf
+++ b/mpv.conf
@@ -63,9 +63,15 @@ volume=60
 volume-max=200
 
 #_Captures d’écran_#
-screenshot-format=png
-screenshot-high-bit-depth=no
-screenshot-png-compression=9
+zimg-scaler=spline36
+zimg-scaler-chroma=bicubic
+zimg-scaler-chroma-param-a=0
+zimg-scaler-chroma-param-b=0.5
+zimg-dither=error-diffusion
+zimg-fast=no
+screenshot-format=webp
+screenshot-webp-lossless=yes
+screenshot-webp-compression=6
 screenshot-directory="D:\Images\mpv"                                        # Mettez votre propre chemin d’accès
 screenshot-template='%f [%P] %#00n'
 
