Retour au dossier racine

--- a/mpv.conf
+++ b/mpv.conf
@@ -100,7 +100,7 @@ tscale-clamp=0.0
 [EraiRaws]
 profile-desc=cond:string.match(p.filename, "Erai%-raws")~=nil
 vf-append=vapoursynth=~~/vpy/debandgrain.vpy:4:auto
-sub-ass-styles="C:\Users\Varde\AppData\Roaming\mpv\template-ass\template.ass"
+sub-ass-styles="C:\Users\Varde\mpv\template-ass\template.ass"
 sub-ass-override=yes
 
 [WebDLWaka]
