Prise en charge du 12bit (HEVC)

--- a/mpv.conf
+++ b/mpv.conf
@@ -112,7 +112,7 @@ profile-desc=cond:((p["video-params/pixelformat"] == "yuv444p10"))
 glsl-shader="~~/Shaders/KrigBilateral-new-444.glsl"
 
 [420]
-profile-desc=cond:((p["video-params/pixelformat"] == "yuv420p10" or p["video-params/pixelformat"] == "yuv420p"))
+profile-desc=cond:((p["video-params/pixelformat"] == "yuv420p12" or p["video-params/pixelformat"] == "yuv420p10" or p["video-params/pixelformat"] == "yuv420p"))
 glsl-shader="~~/Shaders/KrigBilateral-new.glsl"
 
 [FullHD]
