Krigbilateral est censé tout upscale

--- a/mpv.conf
+++ b/mpv.conf
@@ -85,7 +85,7 @@ deband-grain=64                                                             # Pa
 #_Redimensionnement_#
 scale=ewa_lanczossharp
 dscale=catmull_rom
-cscale=ewa_hanning
+cscale=catmull_rom
 
 #_Interpolation_#
 blend-subtitles=yes
