Ajout style sous-titre pour les .srt

--- a/mpv.conf
+++ b/mpv.conf
@@ -55,8 +55,13 @@ alang=ja,jp,jpn                                                             # Co
 demuxer-mkv-subtitle-preroll=index
 sub-font-provider=auto                                                      # None durant mon QC
 sub-fix-timing=no                                                           # S’il vous plaît, ne pas mettre sur yes pour éviter d’avoir des lignes collés à l’anglaise.
-sub-ass-vsfilter-blur-compat=no
-sub-ass-override=no
+sub-font="Libre Varklin"                                                    # Style pour .srt
+sub-font-size=45
+sub-bold=yes
+sub-color="#FFFFFF"
+sub-border-color="#2C2C2C"
+sub-border-size=2.34
+sub-margin-y=50
 
 #_Volume_#
 volume=60
