Changement des paramètres de downscale

--- a/mpv.conf
+++ b/mpv.conf
@@ -89,7 +89,9 @@ deband-grain=64                                                             # Pa
 
 #_Redimensionnement_#
 scale=ewa_lanczossharp
-dscale=catmull_rom
+dscale=bcspline
+dscale-param1=-0.5                                                          # https://forum.doom9.org/showthread.php?p=1802716#post1802716
+dscale-param2=0.25
 cscale=catmull_rom
 
 #_Interpolation_#
