Permet de corriger les édits Crunchy
(Normalement)

--- a/mpv.conf
+++ b/mpv.conf
@@ -108,6 +108,7 @@ tscale-clamp=0.0
 profile-desc=cond:string.match(p.filename, "Erai%-raws")~=nil
 vf-append=vapoursynth=~~/vpy/debandgrain.vpy:4:auto
 sub-ass-styles="C:\Users\Varde\mpv\template-ass\template.ass"
+sub-ass-vsfilter-blur-compat=no
 sub-ass-override=yes
 
 [WebDLWaka]
