--- a/mpv.conf
+++ b/mpv.conf
@@ -129,10 +129,7 @@ glsl-shaders="~~/Shaders/ravu-r3-rgb-edit.hook"
 
 [HD]
 profile-desc=cond:((p["video-params/h"] >= 720 and p["video-params/h"] < 900))
-linear-downscaling=no
-glsl-shaders="~~/Shaders/FSRCNNX_x2_16-0-4-1-edit.glsl"                     # https://github.com/igv/FSRCNN-TensorFlow/releases
-glsl-shader="~~/Shaders/SSimDownscaler.glsl"                                # https://gist.github.com/igv/36508af3ffc84410fe39761d6969be10
-dscale=mitchell
+glsl-shaders="~~/Shaders/ravu-r4-rgb-edit.hook"
 
 [SD]
 profile-desc=cond:((p["video-params/w"] <= 1279 or p["video-params/h"] <= 719))
