ravu 3x produit des trucs bizarres

--- a/mpv.conf
+++ b/mpv.conf
@@ -133,4 +133,4 @@ glsl-shaders="~~/Shaders/ravu-r4-rgb-edit.hook"
 
 [SD]
 profile-desc=cond:((p["video-params/w"] <= 1279 or p["video-params/h"] <= 719))
-glsl-shaders="~~/Shaders/ravu-3x-r4-rgb.hook"
+glsl-shader="~~/Shaders/ravu-r4-rgb-edit.hook"
