Corrige la lenteur de d3d11

--- a/mpv.conf
+++ b/mpv.conf
@@ -19,6 +19,8 @@ prefetch-playlist=yes
 force-seekable=yes
 priority=high
 
+gpu-shader-cache-dir="~~/cache"
+
 #_Dither_#
 dither-depth=10                                                             # Mon écran est en 10 bits
 dither=fruit
