--- a/mpv.conf
+++ b/mpv.conf
@@ -36,7 +36,7 @@ osc=no
 osd-level=1
 osd-duration=1500
 term-osd-bar
-osd-msg3=${osd-sym-cc} ${time-pos} ${?duration:/ ${duration} (${percent-pos}%)} ${!volume==100:\n Vol: ${volume}%} ${!speed!=1:\n Speed: ${speed}} ${!window-scale==1:\n Scale: ${window-scale}} ${!estimated-frame-number==1:\n Estimated Frame Number: ${estimated-frame-number}}
+osd-msg3=${osd-sym-cc} ${time-pos} ${?duration:/ ${duration} (${percent-pos}%)} ${!volume==100:\n Vol: ${volume}%} ${!speed!=1:\n Speed: ${speed}} ${!window-scale==1:\n Scale: ${window-scale}} ${!estimated-frame-number==1:\n Estimated Frame Number: ${estimated-frame-number}} ${!video-bitrate==1:\n Video Bitrate: ${video-bitrate}}
                                                                             # Permet d’afficher la frame en cours. Plutôt utile pour les comparaisons.
 term-status-msg=+${volume}
 osd-font='Source Sans Pro'
