répare le dithering au plus près

--- a/mpv.conf
+++ b/mpv.conf
@@ -80,7 +80,8 @@ screenshot-format=webp
 screenshot-webp-lossless=yes
 screenshot-webp-compression=6
 screenshot-directory="D:\Images\mpv"                                        # Mettez votre propre chemin d’accès
-screenshot-template='%f [%P] %#00n'
+screenshot-template='%f_[%P]_%#00n'
+screenshot-sw=yes
 
 #_Debanding_#
 deband=no                                                                   
