ajustements mineurs de profiles

--- a/mpv.conf
+++ b/mpv.conf
@@ -114,6 +114,13 @@ sub-ass-styles="C:\Users\Varde\mpv\template-ass\template.ass"
 sub-ass-vsfilter-blur-compat=no
 sub-ass-override=yes
 
+[CR]
+profile-desc=cond:string.match(p.filename, "FeelsBadSubs")~=nil
+vf-append=vapoursynth=~~/vpy/debandgrain.vpy:4:auto
+sub-ass-styles="C:\Users\Varde\mpv\template-ass\template.ass"
+sub-ass-vsfilter-blur-compat=no
+sub-ass-override=yes
+
 [WebDLWaka]
 profile-desc=cond:string.match(p.filename, "%_FR%_HD")~=nil
 vf-append=vapoursynth=~~/vpy/debandgrain.vpy:4:auto
@@ -131,9 +138,11 @@ profile-desc=cond:((p["video-params/h"] >= 900))
 glsl-shaders="~~/Shaders/ravu-r3-rgb-edit.hook"
 
 [HD]
-profile-desc=cond:((p["video-params/h"] >= 720 and p["video-params/h"] < 900))
-glsl-shaders="~~/Shaders/ravu-r4-rgb-edit.hook"
+profile-desc=cond:((p["video-params/h"] >= 700 and p["video-params/h"] < 900))
+# glsl-shaders="~~/Shaders/ravu-r4-rgb-edit.hook"
+glsl-shaders="~~/Shaders/FSRCNNX_x2_16-0-4-1.glsl"
+
 
 [SD]
-profile-desc=cond:((p["video-params/w"] <= 1279 or p["video-params/h"] <= 719))
+profile-desc=cond:((p["video-params/w"] <= 1279 or p["video-params/h"] <= 699))
 glsl-shader="~~/Shaders/ravu-r4-rgb-edit.hook"
