remplacement de l'option obsolète

--- a/mpv.conf
+++ b/mpv.conf
@@ -107,14 +107,14 @@ tscale-clamp=0.0
 
 
 [EraiRaws]
-profile-desc=cond:string.match(p.filename, "Erai%-raws")~=nil
+profile-cond=string.match(p.filename, "Erai%-raws")~=nil
 vf-append=vapoursynth=~~/vpy/debandgrain.vpy:4:auto
 sub-ass-styles="C:\Users\Varde\mpv\template-ass\template.ass"
 sub-ass-vsfilter-blur-compat=no
 sub-ass-override=yes
 
 [CR]
-profile-desc=cond:string.match(p.filename, "FeelsBadSubs")~=nil
+profile-cond=string.match(p.filename, "FeelsBadSubs")~=nil
 vf-append=vapoursynth=~~/vpy/debandgrain.vpy:4:auto
 sub-ass-styles="C:\Users\Varde\mpv\template-ass\template.ass"
 sub-ass-vsfilter-blur-compat=no
@@ -125,23 +125,24 @@ profile-desc=cond:string.match(p.filename, "%_FR%_HD")~=nil
 vf-append=vapoursynth=~~/vpy/debandgrain.vpy:4:auto
 
 [444]
-profile-desc=cond:((p["video-params/pixelformat"] == "yuv444p10"))
+profile-cond=p["video-params/pixelformat"] == "yuv444p10"
 glsl-shader="~~/Shaders/KrigBilateral-new-444.glsl"
 
 [420]
-profile-desc=cond:((p["video-params/pixelformat"] == "yuv420p12" or p["video-params/pixelformat"] == "yuv420p10" or p["video-params/pixelformat"] == "yuv420p"))
+profile-cond=p["video-params/pixelformat"] == "yuv420p12" or p["video-params/pixelformat"] == "yuv420p10" or p["video-params/pixelformat"] == "yuv420p" or p["video-params/pixelformat"] == "d3d11[p010]"
 glsl-shader="~~/Shaders/KrigBilateral-new.glsl"
 
 [FullHD]
-profile-desc=cond:((p["video-params/h"] >= 900))
-glsl-shaders="~~/Shaders/ravu-r3-rgb-edit.hook"
+profile-cond=p["video-params/h"] >= 900
+# glsl-shaders="~~/Shaders/ravu-r3-rgb-edit.hook"
+# glsl-shaders="~~/Shaders/ravu-r4-yuv-edit.hook"
+glsl-shader="~~/Shaders/ravu-r4-rgb-edit.hook"
 
 [HD]
-profile-desc=cond:((p["video-params/h"] >= 700 and p["video-params/h"] < 900))
+profile-cond=p["video-params/h"] >= 700 and p["video-params/h"] < 900
 # glsl-shaders="~~/Shaders/ravu-r4-rgb-edit.hook"
 glsl-shaders="~~/Shaders/FSRCNNX_x2_16-0-4-1.glsl"
 
-
 [SD]
-profile-desc=cond:((p["video-params/w"] <= 1279 or p["video-params/h"] <= 699))
+profile-cond=p["video-params/w"] <= 1279 or p["video-params/h"] <= 699
 glsl-shader="~~/Shaders/ravu-r4-rgb-edit.hook"
