ajout d'un profile HDR

--- a/mpv.conf
+++ b/mpv.conf
@@ -146,3 +146,9 @@ glsl-shaders="~~/Shaders/FSRCNNX_x2_16-0-4-1.glsl"
 [SD]
 profile-cond=p["video-params/w"] <= 1279 or p["video-params/h"] <= 699
 glsl-shader="~~/Shaders/ravu-r4-rgb-edit.hook"
+
+[HDR]
+profile-cond=p["video-params/colormatrix"] == "bt.2020-ncl"
+tone-mapping=mobius
+hdr-compute-peak=yes
+gpu-api=vulkan
