mise à jour conf

--- a/mpv.conf
+++ b/mpv.conf
@@ -3,10 +3,11 @@ log-file=~~/log
 # Toutes les options et détails : https://mpv.io/manual/master/
 
 ##_Général_#
-profile=gpu-hq
-vo=gpu
+profile=high-quality
+vo=gpu-next
+
 gpu-shader-cache-dir="~~/cache"
-hwdec=no
+hwdec=auto
 cursor-autohide=100
 msg-module
 msg-color
@@ -19,6 +20,7 @@ input-media-keys=no
 prefetch-playlist=yes
 force-seekable=yes
 priority=high
+script-opts-append=autocrop-auto=no
 
 #_Dither_#
 dither-depth=10                                                             # Mon écran est en 10 bits
@@ -53,7 +55,7 @@ slang=fr,fra,fre                                                            # On
 alang=ja,jp,jpn                                                             # Comme toute bonne personne, on regarde que du VOSTFR
 
 #_Sous-titres_#
-demuxer-mkv-subtitle-preroll=index
+demuxer-mkv-subtitle-preroll=yes
 sub-font-provider=auto                                                      # None durant mon QC
 sub-fix-timing=no                                                           # S’il vous plaît, ne pas mettre sur yes pour éviter d’avoir des lignes collés à l’anglaise.
 sub-font="Libre Varklin"                                                    # Style pour .srt
@@ -75,7 +77,7 @@ zimg-scaler-chroma-param-a=0
 zimg-scaler-chroma-param-b=0.5
 zimg-dither=error-diffusion
 zimg-fast=no
-screenshot-format=webp
+screenshot-format=png
 screenshot-webp-lossless=yes
 screenshot-webp-compression=6
 screenshot-directory="D:\Images\mpv"                                        # Mettez votre propre chemin d’accès
@@ -84,68 +86,30 @@ screenshot-sw=yes
 
 #_Debanding_#
 deband=no                                                                   
-deband-iterations=4
-deband-threshold=64
+deband-iterations=6
+deband-threshold=48
 deband-range=18
-deband-grain=64                                                             # Parce que le grain dynamique c’est la vie
+deband-grain=48                                                             # Parce que le grain dynamique c’est la vie
 
 #_Redimensionnement_#
-scale=ewa_lanczossharp
-dscale=bcspline
-dscale-param1=-0.5                                                          # https://forum.doom9.org/showthread.php?p=1802716#post1802716
-dscale-param2=0.25
+scale-antiring=0.6
+dscale=hermite
+dscale-param1=0
+dscale-param2=0
 cscale=catmull_rom
+glsl-shader="~~/Shaders/ArtCNN_C4F16_CMP.glsl"
+glsl-shader="~~/Shaders/KrigBilateral.glsl"
 
 #_Interpolation_#
 blend-subtitles=yes
-interpolation=yes
+interpolation=no
 video-sync=display-resample
-tscale=box
-tscale-window=sphinx
-tscale-radius=1.00                                                          # Plus bas (e.g. 0.95) = Plus net; Plus haut (e.g. 1.05) = Plus doux
-tscale-clamp=0.0
-
-
-[EraiRaws]
-profile-cond=string.match(p.filename, "Erai%-raws")~=nil
-vf-append=vapoursynth=~~/vpy/debandgrain.vpy:4:auto
-sub-ass-styles="C:\Users\Varde\mpv\template-ass\template.ass"
-sub-ass-vsfilter-blur-compat=no
-sub-ass-override=yes
 
 [CR]
 profile-cond=string.match(p.filename, "FeelsBadSubs")~=nil
-vf-append=vapoursynth=~~/vpy/debandgrain.vpy:4:auto
 sub-ass-styles="C:\Users\Varde\mpv\template-ass\template.ass"
 sub-ass-vsfilter-blur-compat=no
 sub-ass-override=yes
-
-[WebDLWaka]
-profile-desc=cond:string.match(p.filename, "%_FR%_HD")~=nil
-vf-append=vapoursynth=~~/vpy/debandgrain.vpy:4:auto
-
-[444]
-profile-cond=p["video-params/pixelformat"] == "yuv444p10"
-glsl-shader="~~/Shaders/KrigBilateral-new-444.glsl"
-
-[420]
-profile-cond=p["video-params/pixelformat"] == "yuv420p12" or p["video-params/pixelformat"] == "yuv420p10" or p["video-params/pixelformat"] == "yuv420p" or p["video-params/pixelformat"] == "d3d11[p010]"
-glsl-shader="~~/Shaders/KrigBilateral-new.glsl"
-
-[FullHD]
-profile-cond=p["video-params/h"] >= 900
-# glsl-shaders="~~/Shaders/ravu-r3-rgb-edit.hook"
-# glsl-shaders="~~/Shaders/ravu-r4-yuv-edit.hook"
-glsl-shader="~~/Shaders/ravu-r4-rgb-edit.hook"
-
-[HD]
-profile-cond=p["video-params/h"] >= 700 and p["video-params/h"] < 900
-# glsl-shaders="~~/Shaders/ravu-r4-rgb-edit.hook"
-glsl-shaders="~~/Shaders/FSRCNNX_x2_16-0-4-1.glsl"
-
-[SD]
-profile-cond=p["video-params/w"] <= 1279 or p["video-params/h"] <= 699
-glsl-shader="~~/Shaders/ravu-r4-rgb-edit.hook"
 
 [HDR]
 profile-cond=p["video-params/colormatrix"] == "bt.2020-ncl"
