mise à jour conf

--- a/mpv.conf
+++ b/mpv.conf
@@ -71,18 +71,10 @@ volume=60
 volume-max=200
 
 #_Captures d’écran_#
-zimg-scaler=spline36
-zimg-scaler-chroma=bicubic
-zimg-scaler-chroma-param-a=0
-zimg-scaler-chroma-param-b=0.5
-zimg-dither=error-diffusion
-zimg-fast=no
 screenshot-format=png
-screenshot-webp-lossless=yes
-screenshot-webp-compression=6
 screenshot-directory="D:\Images\mpv"                                        # Mettez votre propre chemin d’accès
 screenshot-template='%f_[%P]_%#00n'
-screenshot-sw=yes
+screenshot-sw=no
 
 #_Debanding_#
 deband=no                                                                   
@@ -94,21 +86,32 @@ deband-grain=48                                                             # Pa
 #_Redimensionnement_#
 scale-antiring=0.6
 dscale=hermite
-dscale-param1=0
+dscale-param1=0                                                             # https://forum.doom9.org/showthread.php?p=1802716#post1802716
 dscale-param2=0
-cscale=catmull_rom
-glsl-shader="~~/Shaders/ArtCNN_C4F16_CMP.glsl"
-glsl-shader="~~/Shaders/KrigBilateral.glsl"
+linear-downscaling=yes
 
 #_Interpolation_#
 blend-subtitles=yes
 interpolation=no
 video-sync=display-resample
 
+[Fullscreen]
+profile-cond=fullscreen
+cscale=ewa_lanczos
+glsl-shaders-clr
+glsl-shaders-append="~~/Shaders/ArtCNN_C4F16_CMP.glsl"                      # https://github.com/Artoriuz/ArtCNN
+
+[NotFullscreen]
+profile-cond=not fullscreen
+cscale=bilinear
+cscale-antiring=0.0
+glsl-shaders-clr
+glsl-shaders-append="~~/Shaders/ArtCNN_C4F16_Chroma.glsl"                   # https://github.com/Artoriuz/ArtCNN
+
 [CR]
 profile-cond=string.match(p.filename, "FeelsBadSubs")~=nil
 sub-ass-styles="C:\Users\Varde\mpv\template-ass\template.ass"
-sub-ass-vsfilter-blur-compat=no
+sub-ass-use-video-data=all
 sub-ass-override=yes
 
 [HDR]
